css: styling main

--- a/style.css
+++ b/style.css
@@ -4,8 +4,35 @@
     --background-2: #4c5c96;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: var(--background-1);
     color: var(--main-color);
-    font-family: Raleway, Helvetica, sans-serif;
+    font-family: "Raleway", Helvetica, sans-serif;
+    padding: 2rem 1rem;
+}
+
+/* MAIN */
+
+main {
+    text-align: center;
+}
+
+main h1 {
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+main span {
+    font-weight: 600;
+}
+
+main p {
+    margin-bottom: 2rem;
 }
