css: updated css variable names

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
-    --main-color: #FFFFFF;
-    --secondary-color: #FFFFFFBF;
-    --background-1: #282C34;
-    --background-2: #4c5c96;
+    --main-text: #FFFFFF;
+    --secondary-text: #DCDCDC;
+    --main-back: #282C34;
+    --secondary-back: #4c5c96;
+    --accent: #414a65;
 }
 
 * {
@@ -13,8 +14,8 @@
 }
 
 body {
-    background-color: var(--background-1);
-    color: var(--main-color);
+    background-color: var(--main-back);
+    color: var(--main-text);
 }
 
 h1, h2 {
@@ -24,7 +25,7 @@ h1, h2 {
 }
 
 p {
-    color: var(--secondary-color);
+    color: var(--secondary-text);
     margin-bottom: 1rem;
 }
 
@@ -33,12 +34,12 @@ button:hover {
 }
 
 .divider-1 {
-    background-image: linear-gradient(to right bottom, var(--background-1) 49%, var(--background-2) 50%);
+    background-image: linear-gradient(to right bottom, var(--main-back) 49%, var(--secondary-back) 50%);
     height: 2rem;
 }
 
 .divider-2 {
-    background-image: linear-gradient(to right top, var(--background-1) 49%, var(--background-2) 50%);
+    background-image: linear-gradient(to right top, var(--main-back) 49%, var(--secondary-back) 50%);
     height: 2rem;
 }
 
@@ -54,7 +55,7 @@ main span {
 }
 
 main p {
-    color: var(--secondary-color);
+    color: var(--secondary-text);
     margin-bottom: 2rem;
     padding: 0 1rem;
 }
@@ -65,12 +66,19 @@ main button {
     margin-bottom: 1rem;
     padding: 1rem 0;
     border-radius: .25rem;
-    border: none;
+    border: 2px solid var(--accent);
+    outline: none;
+    background-color: transparent;
+    color: var(--secondary-text);
+}
+
+main button:hover {
+    background-color: var(--accent);
 }
 
 /* SERVICES */
 
 .services {
-    background-color: var(--background-2);
+    background-color: var(--secondary-back);
     padding: 2rem 1rem;
 }
