--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ button:hover {
     cursor: pointer;
 }
 
+.container {
+    padding: 2rem 1rem;
+}
+
 .divider-1 {
     background-image: linear-gradient(to right bottom, var(--main-back) 49%, var(--secondary-back) 50%);
     height: 2rem;
@@ -47,7 +51,6 @@ button:hover {
 
 main {
     text-align: center;
-    padding: 2rem 1rem;
 }
 
 main span {
@@ -80,5 +83,4 @@ main button:hover {
 
 .services {
     background-color: var(--secondary-back);
-    padding: 2rem 1rem;
 }
