drafted index.js. added #work-btn button with event listener that toggles button text when clicked

--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ button:hover {
     height: 2rem;
 }
 
+.hidden {
+    display: none;
+}
+
 /* MAIN */
 
 main {
@@ -77,6 +81,7 @@ main button {
 
 main button:hover {
     background-color: var(--accent);
+    color: var(--main-text);
 }
 
 /* SERVICES */
