updated copy with bolded text

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 h1, h2 {
     font-size: 1.5rem;
     font-weight: 400;
-    margin-bottom: 1rem;
+    margin: 1rem 0 2rem;
 }
 
 p {
@@ -51,6 +51,10 @@ button:hover {
     padding: 2rem 1rem;
 }
 
+.bold {
+    font-weight: 600;
+}
+
 .divider-1 {
     background-image: linear-gradient(to right bottom, var(--main-back) 49%, var(--secondary-back) 50%);
     height: 2rem;
@@ -71,10 +75,6 @@ main {
     text-align: center;
 }
 
-main span {
-    font-weight: 600;
-}
-
 main p {
     color: var(--secondary-text);
     margin-bottom: 2rem;
@@ -89,3 +89,6 @@ main p {
 
 /* MY-WORK */
 
+.work-buttons {
+    margin-top: 2rem;
+}
