updated #websites and #applications with .gallery class in event listeners

--- a/style.css
+++ b/style.css
@@ -109,6 +109,11 @@ main p {
     margin-top: 2rem;
 }
 
+.gallery {
+    display: flex;
+    justify-content: center;
+}
+
 /* SERVICES */
 
 .services {
