--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ h1, h2 {
     margin: 1rem 0 2rem;
 }
 
+h3 {
+    font-weight: 400;
+}
+
 p {
     color: var(--secondary-text);
     margin-bottom: 1rem;
