--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ body {
     color: var(--main-text);
 }
 
-h1, h2 {
+h1, h2, h3 {
     font-size: 1.5rem;
     font-weight: 400;
     margin: 1rem 0 2rem;
 }
 
 h3 {
-    font-weight: 400;
+    margin: 2rem 0;
 }
 
 p {
@@ -122,4 +122,21 @@ main p {
 
 .services {
     background-color: var(--secondary-back);
+}
+
+/* SERVICES - PROCESS */
+
+.process {
+    margin-left: 1rem;
+}
+
+.process h4 {
+    margin-bottom: .25rem;
+    font-weight: 400;
+}
+
+.process-point {
+    display: inline-block;
+    margin-bottom: 1rem;
+    color: var(--secondary-text);
 }
