replaced .contact form. it wasn't refreshing

--- a/style.css
+++ b/style.css
@@ -146,3 +146,8 @@ main p {
 .contact {
     background-color: var(--secondary-back);
 }
+
+form {
+    outline: 1px solid red;
+    margin: 2rem 0;
+}
