--- a/style.css
+++ b/style.css
@@ -151,3 +151,16 @@ form {
     outline: 1px solid red;
     margin: 2rem 0;
 }
+
+.form-half {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    color: var(--secondary-text);
+    font-size: .8rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    margin-bottom: .5rem;
+}
