form: styled textarea

--- a/style.css
+++ b/style.css
@@ -181,3 +181,8 @@ input {
 .field:focus {
     border: 1px solid var(--main-text);
 }
+
+textarea {
+    width: 100%;
+    margin: .5rem 0 1.5rem;
+}
