added media query @ 480px. styled .work-buttons at that width

--- a/style.css
+++ b/style.css
@@ -213,3 +213,12 @@ footer {
     height: 5rem;
     text-align: center;
 }
+
+/* MEDIA QUERIES */
+
+@media screen and (min-width: 480px) {
+    .work-buttons {
+        display: flex;
+        gap: 1rem;
+    }
+}
