--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ main p {
 
 .about-me img {
     width: 100%;
+    max-width: 480px;
     border-radius: 50%;
 }
 
@@ -191,7 +192,7 @@ input {
 
 textarea {
     width: 100%;
-    margin: .5rem 0 1.5rem;
+    margin: 0 0 1.5rem;
 }
 
 .contact button {
@@ -217,8 +218,28 @@ footer {
 /* MEDIA QUERIES */
 
 @media screen and (min-width: 480px) {
+    .img-container {
+        max-width: 480px;
+        margin: auto;
+    }
     .work-buttons {
         display: flex;
         gap: 1rem;
+    }
+}
+
+@media screen and (min-width: 640px) {
+    form {
+        display: flex;
+        gap: 1rem;
+    }
+
+    .form-half {
+        width: 50%;
+    }
+
+    textarea {
+        height: 9.25rem;
+        margin: 0 0 2.9rem;
     }
 }
