--- a/style.css
+++ b/style.css
@@ -229,6 +229,11 @@ footer {
 }
 
 @media screen and (min-width: 640px) {
+    .work-buttons {
+        max-width: 640px;
+        margin: 2rem auto 0;
+    }
+
     form {
         display: flex;
         gap: 1rem;
