--- a/style.css
+++ b/style.css
@@ -156,7 +156,6 @@ main p {
 }
 
 form {
-    /* outline: 1px solid red; */
     margin: 2rem 0;
 }
 
@@ -237,6 +236,8 @@ footer {
     form {
         display: flex;
         gap: 1rem;
+        max-width: 640px;
+        margin: 2rem auto;
     }
 
     .form-half {
