--- a/style.css
+++ b/style.css
@@ -114,9 +114,34 @@ main p {
 }
 
 .gallery {
+    outline: 1px solid red;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
+
+.project {
+    outline: 1px solid orange;
+}
+
+.project-buttons {
+    display: flex;
+    justify-content: space-around;
+}
+
+.visit-site, .view-code {
+    border: 2px solid var(--accent);
+    border-radius: .25rem;
+    width: 7.5rem;
+    padding: .25rem 0;
+    text-align: center;
+}
+
+.project i, .visit-icon {
+    font-size: 1rem;
+    color: var(--main-text);
+}
+
 
 /* SERVICES */
 
