--- a/style.css
+++ b/style.css
@@ -141,9 +141,15 @@ main p {
     text-transform: uppercase;
 }
 
+.project a {
+    color: var(--secondary-text);
+    text-decoration: none;
+}
+
 .project-buttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem 0;
     border-top: 1px solid var(--accent2);
     border-bottom: 1px solid var(--accent2);
@@ -152,11 +158,13 @@ main p {
 }
 
 .visit-site, .view-code {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 2px solid var(--accent);
     border-radius: .25rem;
-    width: 7rem;
+    width: 7.25rem;
     padding: .25rem 0;
-    text-align: center;
 }
 
 .visit-site:hover, .view-code:hover {
@@ -171,6 +179,7 @@ main p {
 .project i, .visit-icon {
     font-size: 1rem;
     color: var(--secondary-text);
+    margin-right: .5rem;
 }
 
 .project-info {
