--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ main p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 2rem;
     gap: 2rem;
 }
 
@@ -312,6 +313,17 @@ footer {
     .work-buttons {
         max-width: 640px;
         margin: 2rem auto 0;
+    }
+
+    .gallery {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
+    }
+
+    .project {
+        width: 47%;
     }
 
     form {
