rounded the corners of .project and its images

--- a/style.css
+++ b/style.css
@@ -127,10 +127,13 @@ main p {
 
 .project {
     background-color: var(--third-back);
+    border-radius: .5rem;
 }
 
 .screenshot {
     width: 100%;
+    border-top-left-radius: .5rem;
+    border-top-right-radius: .5rem;
 }
 
 .inner-project-container {
