--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ main p {
 .project a {
     color: var(--secondary-text);
     text-decoration: none;
+    width: 48%;
 }
 
 .project-buttons {
@@ -155,8 +156,8 @@ main p {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0;
-    border-top: 1px solid var(--accent2);
-    border-bottom: 1px solid var(--accent2);
+    border-top: 1px solid var(--accent);
+    border-bottom: 1px solid var(--accent);
     margin: 1rem 0;
     color: var(--secondary-text);
 }
@@ -165,9 +166,8 @@ main p {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid var(--accent);
+    border: 1px solid var(--accent2);
     border-radius: .25rem;
-    width: 7.25rem;
     padding: .25rem 0;
 }
 
