--- a/style.css
+++ b/style.css
@@ -71,6 +71,13 @@ button:hover {
     height: 2rem;
 }
 
+.divider-3 {
+    background-image: linear-gradient(to right bottom, var(--main-back) 49%, transparent 50%);
+    position: absolute;
+    height: 2rem;
+    width: 100%;
+}
+
 .hidden {
     display: none;
 }
@@ -239,13 +246,30 @@ main p {
     width: 100%;
     max-width: 480px;
     border-radius: 50%;
+    position: relative;
 }
 
 .bk-about-me {
     background-image: url("/img/jesus-curiel.jpg");
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    height: 70vh;
+}
+
+.bk-reading p {
+    background-color: rgba(40, 44, 52, .35);
+    color: var(--main-text);
+    text-shadow:
+        0.05em 0 black,
+        0 0.05em black,
+        -0.05em 0 black,
+        0 -0.05em black,
+        -0.05em -0.05em black,
+        -0.05em 0.05em black,
+        0.05em -0.05em black,
+        0.05em 0.05em black;
 }
 
 /* CONTACT */
