updated footer text. changed height of .bk-about-me

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ main p {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 40vh;
+    height: 25rem;
     color: white;
 }
 
