--- a/style.css
+++ b/style.css
@@ -252,6 +252,23 @@ main p {
     margin: 0 0 .5rem .5rem;
 }
 
+/* MY-WORK - CAROUSEL */
+
+.carousel-container {
+    outline: 1px solid red;
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+.slide {
+    display: none;
+}
+
+.carousel-controls {
+    outline: 1px solid orange;
+}
+
 /* SERVICES */
 
 .services {
