--- a/style.css
+++ b/style.css
@@ -265,6 +265,35 @@ main p {
     display: none;
 }
 
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+    outline: 1px solid yellow;
+}
+
+.prev {
+    outline: 1px solid green;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
 .carousel-controls {
     outline: 1px solid orange;
 }
