--- a/style.css
+++ b/style.css
@@ -298,6 +298,17 @@ main p {
     outline: 1px solid orange;
 }
 
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
 /* SERVICES */
 
 .services {
