--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ main p {
     align-items: center;
     margin-top: 2rem;
     gap: 2rem;
+    outline: 1px solid red;
 }
 
 /* MY-WORK - PROJECTS */
@@ -307,6 +308,10 @@ main p {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
 }
 
 /* SERVICES */
