adjusted width & positioning of .carousel-container, .slide

--- a/style.css
+++ b/style.css
@@ -163,7 +163,6 @@ main p {
     align-items: center;
     margin-top: 2rem;
     gap: 2rem;
-    outline: 1px solid red;
 }
 
 /* MY-WORK - PROJECTS */
@@ -256,7 +255,8 @@ main p {
 /* MY-WORK - CAROUSEL */
 
 .carousel-container {
-    outline: 1px solid red;
+    border: 1px solid red;
+    width: 100%;
     max-width: 1000px;
     position: relative;
     margin: auto;
@@ -264,6 +264,9 @@ main p {
 
 .slide {
     display: none;
+    width: 100%;
+    outline: 1px solid orange;
+    text-align: center;
 }
 
 .prev, .next {
