moved #carousel into its own section, on the same level as #websites and #applications

--- a/style.css
+++ b/style.css
@@ -254,6 +254,10 @@ main p {
 
 /* MY-WORK - CAROUSEL */
 
+#carousel {
+    border: 1px solid yellow;
+}
+
 .carousel-container {
     width: 100%;
     max-width: 1000px;
@@ -277,6 +281,7 @@ main p {
     transition: 0.6s ease;
     border-radius: .5rem;
     user-select: none;
+    border: 1px solid orange;
 }
 
 .prev:hover, .next:hover {
@@ -285,8 +290,9 @@ main p {
 }
 
 .carousel-controls {
-    width: 100%;
-    display: flex;
+    border: 10px solid red;
+    width: 100vw;
+    display: block;
     justify-content: space-between;
     align-items: baseline;
     text-align: center;
