refactoring JS. updated global variables

--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ main p {
 /* MY-WORK - CAROUSEL */
 
 .carousel-container {
+    outline: 1px solid red;
     width: 100%;
     max-width: 1000px;
     position: relative;
@@ -285,6 +286,7 @@ main p {
 }
 
 .carousel-controls {
+    outline: 1px solid orange;
     width: 100%;
     display: flex;
     justify-content: space-between;
