styling .gallery-container

--- a/style.css
+++ b/style.css
@@ -467,6 +467,8 @@ footer {
         align-items: stretch;
         justify-content: space-between;
         gap: 1rem;
+        margin: 2rem auto 0;
+        max-width: 1000px;
     }
 
     /* .gallery {
@@ -477,7 +479,7 @@ footer {
     } */
 
     .project {
-        width: 47%;
+        width: 48%;
     }
 
     form {
