--- a/style.css
+++ b/style.css
@@ -426,18 +426,6 @@ textarea {
     margin: 0 0 1.5rem;
 }
 
-/* .contact button {
-    background-color: var(--accent);
-    color: var(--secondary-text);
-    border: 1px solid var(--secondary-text);
-}
-
-.contact button:hover {
-    background-color: var(--main-back);
-    color: var(--main-text);
-    border: 1px solid var(--main-text);
-} */
-
 .contact .social {
     text-align: center;
 }
@@ -457,6 +445,18 @@ footer {
         max-width: 480px;
         margin: auto;
     }
+
+    .pitch-btn-container {
+        display: flex;
+        justify-content: flex-end;
+        max-width: 640px;
+        margin: 2rem auto 0;
+    }
+
+    .pitch button {
+        max-width: 48%;
+    }
+
     .work-buttons {
         display: flex;
         gap: 1rem;
@@ -464,17 +464,6 @@ footer {
 }
 
 @media screen and (min-width: 640px) {
-    .pitch-btn-container {
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 2rem;
-    }
-    
-    .pitch button {
-        max-width: 310px;
-        /* margin-right: 2.5rem; */
-    }
-
     .carousel-container {
         display: none;
     }
